@@ -1,0 +1,3 @@
+Name: GNU Autoconf
+Bug-Submit: bug-autoconf@gnu.org
+Homepage: http://www.gnu.org/software/autoconf/
